--- a/student from a team page.html
+++ b/student from a team page.html
@@ -86,7 +86,7 @@
                     </select>
                 </label>
 
-      <!--start of changes-->    
+      <!--Buttons-->    
                 
                 <div class="button-group">
                     <button type="button" class="button add-theme-button" id="displayAddThemeButton" onclick="displayAddTheme()">Add a Theme</button>
@@ -100,7 +100,7 @@
                     var div = document.createElement('div');
                     function displayAddTheme() {
 
-                        var htmlString = '<div class="style_PopUpCard__mgUyL" id="addThemePopup"><div class="style_header__CISD2"><div></div><text class="text_Heading__Zkgao"> Add a Theme to the Scheme </text><div></div></div><div class="style_ContainerVertical3__RZI+U"><text class="text_Small__HQ874">Name</text><input class="style_InputField3__nYn-d" placeholder="Theme"><text class="text_Small__HQ874">Description</text><input class="style_InputBox2__GOJuP" placeholder="Enter a description"><button class="style_AddButton__+XuWL" id="addThemeButton" onclick="closeAddTheme()">Add</button></div></div>';
+                        var htmlString = '<div class="style_PopUpCard" id="addThemePopup"><div class="style_Header"><div></div><text class="text_Heading"> Add a Theme to the Scheme </text><div></div></div><div class="style_ContainerVertical"><text class="text_Small">Name</text><input class="style_InputField" placeholder="Theme"><text class="text_Small">Description</text><input class="style_InputBox" placeholder="Enter a description"><button class="style_AddButton" id="addThemeButton" onclick="closeAddTheme()">Add</button></div></div>';
 
                         var div = document.createElement('div');
                         div.innerHTML = htmlString.trim();
@@ -129,7 +129,7 @@
 
 
                 </script>
-<!--end of changes-->
+<!--End of popup script-->
                 
             </form>
         </section>
