--- a/createAccountPage.html
+++ b/createAccountPage.html
@@ -62,7 +62,7 @@
                 </div>
                 <!-- Group for WhatsApp number input -->
                 <div class="input-container">
-                    <input id="whatsapp-number" name="whatsapp-number" placeholder="Enter WhatsApp Number" class="input-field" type="tel" pattern="[0-9]*" required aria-label="WhatsApp Number">
+                    <input id="whatsapp-number" name="whatsapp-number" placeholder="Enter WhatsApp Number" class="input-field" type="number" pattern="[0-9]*" required aria-label="WhatsApp Number">
                     <label for="whatsapp-number" class="input-label">Enter WhatsApp Number</label>
                     <span class="input-highlight"></span>
                 </div>
@@ -97,30 +97,7 @@
             </form>
     </div>
 </div>
-<div class="form">
-  
-</div>
-
-    <!-- Footer section -->
-    <footer>
-      <div class="footer-section about">
-          <h3>About Us</h3>
-          <p>We are SWE and ICS students who created this website to connect students seeking teammates for their capstone project.</p>
-      </div>
-      <div class="footer-section contact">
-          <h3>Contact</h3>
-          <p>Email: contact@mywebsite.com</p>
-          <p>Phone: +123 456 789</p>
-      </div>
-      <div class="footer-section follow">
-          <h3>Follow</h3>
-          <div class="social-icons">
-              <a href="https://www.facebook.com" target="_blank"><img src="Icon facebook.png" alt="Facebook"></a>
-              <a href="https://www.x.com" target="_blank"><img src="Icon twitter.png" alt="Twitter"></a>
-              <a href="https://www.instagram.com" target="_blank"><img src="Icon instagram.png" alt="Instagram"></a>
-          </div>
-      </div>
-  </footer>
 
 </body>
+<script src="formValidation.js"></script>
 </html>
