--- a/loginPage.html
+++ b/loginPage.html
@@ -8,8 +8,6 @@
     <link rel="stylesheet" href="mobileLogin.css">
 </head>
 <body>
-    
-    <div class="tower-image" style="width: 0px; height: 0px;"></div>
     <!-- Container for the login page -->
 <div class="page">
 
@@ -56,4 +54,24 @@
     </div>
 </div>
 </body>
+<script>
+    document.querySelector('.form').addEventListener('submit', function(event) {
+    // Get form inputs
+    const username = document.getElementById('username').value.trim().toLowerCase();
+    const password = document.getElementById('password').value.trim().toLowerCase();
+
+    // Check if both fields are "admin"
+    if (username === 'admin' && password === 'admin') {
+        // Redirect to admin homepage
+        window.location.href = 'admin-homepage.html';
+        event.preventDefault(); // Prevent form submission
+    } else if (username === 'moderator' && password === 'moderator') {
+        // Redirect to moderator homepage
+        window.location.href = 'moderator homepage.html';
+        event.preventDefault(); // Prevent form submission
+    } else {
+        // other validations or form submission
+    }
+});
+</script>
 </html>
