--- a/student from a team page.html
+++ b/student from a team page.html
@@ -90,7 +90,7 @@
                 
                 <div class="button-group">
                     <button type="button" class="button add-theme-button" id="displayAddThemeButton" onclick="displayAddTheme()">Add a Theme</button>
-                    <button type="submit" class="button create-scheme-button">Create the Team Scheme</button>
+                    <button type="submit" class="button create-scheme-button" onclick="window.location.href = 'TeamFormationPage.html'; return false;">Create the Team Scheme</button>
                 </div>
                 
                 <!-- popup script-->
