--- a/admin page.html
+++ b/admin page.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
     <title>admin page</title>
     <style>
         body {
@@ -16,14 +21,39 @@
         }
 
         .sidebar {
-            width: 250px;
-            background-color: #fff;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            min-width: auto;
+            max-width: 230px;
+            height: 100vh;
             position: fixed;
-            top: 0;
+            top: 56px;
+            /* Height of navbar */
             left: 0;
-            bottom: 0;
+            background-color: #cae6db;
+            color: #171212;
             padding-top: 20px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .sidebar .nav-link,
+        .offcanvas-body .nav-item {
+            color: #171a1d;
+            margin: 10px 15px;
+        }
+
+        .sidebar .nav-link:hover,
+        .offcanvas-body .nav-item:hover {
+            color: #fff;
+            background-color: #a9d9ca;
+            border-radius: 25px;
+            /* Increased border-radius */
+        }
+
+        .sidebar .nav-link.active,
+        .offcanvas-body .nav-item.active {
+            background-color: #a9d9ca;
+            color: #171a1d;
+            border-radius: 25px;
+            /* Increased border-radius */
         }
 
         .sidebar a {
@@ -161,12 +191,35 @@
         }
     </style>
 </head>
+
 <body>
-    <div class="sidebar">
+    <!-- <div class="sidebar">
         <a href="#"><span class="icon">🏠</span> Home</a>
         <a href="#"><span class="icon">👥</span> Teams</a>
         <a href="#"><span class="icon">📊</span> Team schemes</a>
-    </div>
+    </div> -->
+    <!-- Sidebar -->
+    <nav class="col-lg-2 d-none d-lg-block sidebar">
+        <div class="position-sticky pt-3">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin-homepage.html">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin-view-teams.html">
+                        Teams
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/admin page.html">
+                        Team schemes
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <header>
             <h1>Existing Team Schemes</h1>
@@ -209,4 +262,5 @@
         </section>
     </div>
 </body>
+
 </html>
