--- a/admin-view-teams.html
+++ b/admin-view-teams.html
@@ -40,7 +40,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin page2.html">
+                            <a class="nav-link" href="/admin page.html">
                                 Team schemes
                             </a>
                         </li>
@@ -66,7 +66,7 @@
                             <a class="nav-link active text-dark" href="/admin-view-teams.html">Teams</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/admin page2.html">Team schemes</a>
+                            <a class="nav-link text-dark" href="/admin page.html">Team schemes</a>
                         </li>
                     </ul>
                 </div>
