--- a/admin page.html
+++ b/admin page.html
@@ -56,7 +56,7 @@
             /* Increased border-radius */
         }
 
-        .sidebar a {
+        /* .sidebar a {
             display: flex;
             align-items: center;
             padding: 15px 20px;
@@ -73,7 +73,7 @@
 
         .sidebar a .icon {
             margin-right: 10px;
-        }
+        } */
 
         .container {
             margin-left: 270px;
@@ -198,6 +198,17 @@
         <a href="#"><span class="icon">👥</span> Teams</a>
         <a href="#"><span class="icon">📊</span> Team schemes</a>
     </div> -->
+    <!-- Navbar -->
+    <nav class="navbar navbar-light bg-white fixed-top shadow-sm">
+        <div class="container-fluid">
+            <!-- Offcanvas Toggle Button -->
+            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand ms-2" href="/admin-view-teams.html">Team schemes</a>
+        </div>
+    </nav>
     <!-- Sidebar -->
     <nav class="col-lg-2 d-none d-lg-block sidebar">
         <div class="position-sticky pt-3">
