--- a/student-homepage-team.html
+++ b/student-homepage-team.html
@@ -30,6 +30,7 @@ Note: The file includes placeholders for images and links to external resources.
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Builder</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
