--- a/admin-view-teams.html
+++ b/admin-view-teams.html
@@ -75,7 +75,56 @@
             <!-- Main Content -->
             <main class="col-lg-10 ms-sm-auto px-md-4 content">
                 <div class="card-container row" id="cardContainer">
-                    <!-- Cards will be dynamically added here -->
+                    <!-- Placeholder cards to be displayed while loading -->
+                    <div class="col-md-6 mb-4 placeholder-card">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title placeholder-glow">
+                                    <span class="placeholder col-6"></span>
+                                </h5>
+                                <p class="card-text placeholder-glow">
+                                    <span class="placeholder col-7"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-6"></span>
+                                    <span class="placeholder col-8"></span>
+                                </p>
+                                <div class="d-flex mb-3">
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Add more placeholder cards as needed -->
+                    <div class="col-md-6 mb-4 placeholder-card">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title placeholder-glow">
+                                    <span class="placeholder col-6"></span>
+                                </h5>
+                                <p class="card-text placeholder-glow">
+                                    <span class="placeholder col-7"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-6"></span>
+                                    <span class="placeholder col-8"></span>
+                                </p>
+                                <div class="d-flex mb-3">
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
