--- a/student-homepage.html
+++ b/student-homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,13 +13,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="homeStyles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-light bg-white fixed-top shadow-sm">
     <div class="container-fluid">
       <!-- Offcanvas Toggle Button -->
-      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasSidebar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand ms-2" href="#">Team Builder</a>
@@ -26,7 +30,7 @@
     </div>
   </nav>
 
-  <!-- Sidebar -->
+  <!-- Shared Sidebar -->
   <nav class="sidebar">
     <div class="position-sticky pt-3">
       <ul class="nav flex-column">
@@ -44,18 +48,18 @@
     </div>
   </nav>
 
-  <!-- Offcanvas Sidebar for Small Screens -->
-  <div class="offcanvas offcanvas-start bg-light" tabindex="-1" id="offcanvasSidebar" aria-labelledby="offcanvasSidebarLabel">
+  <!-- Shared Offcanvas -->
+  <div class="offcanvas offcanvas-start bg-light" tabindex="-1" id="offcanvasSidebar"
+    aria-labelledby="offcanvasSidebarLabel">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title text-dark" id="offcanvasSidebarLabel">Menu</h5>
-      <button type="button" class="btn-close btn-close-dark text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      <button type="button" class="btn-close btn-close-dark text-reset" data-bs-dismiss="offcanvas"
+        aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
       <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link active text-dark" href="#">
-            Home
-          </a>
+        <li class="nav-item ">
+          <a class="nav-link active text-dark " href="#"> Home </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-dark" href="student-team-proposals.html">Team Proposals</a>
@@ -63,12 +67,16 @@
       </ul>
     </div>
   </div>
+  <!-- Same sidebar content -->
+  </div>
 
   <!-- Main Content -->
   <main class="px-md-4 content">
+    <!-- Shared Profile Section -->
     <div class="d-flex align-items-center mb-4 position-relative">
       <img src="account_circle.svg" id="profilePic" class="rounded-circle me-3 img-100" alt="Profile Picture">
-      <button class="btn btn-success btn-sm position-absolute" id="editProfilePicture" data-bs-toggle="modal" data-bs-target="#editProfilePicModal" aria-label="Edit profile picture">
+      <button class="btn btn-success btn-sm position-absolute" id="editProfilePicture" data-bs-toggle="modal"
+        data-bs-target="#editProfilePicModal">
         <i class="bi bi-pencil"></i>
       </button>
       <div id="userInfo" style="padding: 20px;">
@@ -79,17 +87,92 @@
       </div>
     </div>
 
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-auto">
-          <button class="btn btn-outline-success btn-lg rounded-pill shadow w-100" style="max-width: 40rem; height: 4.5rem; margin-top: 20%; font-size: 1.5rem;" onclick="window.location.href='TeamFormationPage.html';">Create a team</button>
+    <!-- No Team State -->
+    <div id="noTeamContent">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <button class="btn btn-outline-success btn-lg rounded-pill shadow w-100"
+              style="max-width: 40rem; height: 4.5rem; margin-top: 20%; font-size: 1.5rem;" id="createTeamBtn">Create a
+              team</button>
+          </div>
         </div>
+      </div>
+    </div>
+
+    <!-- Team State -->
+    <div id="teamContent" class="d-none">
+      <!-- Team Members Card -->
+      <div class="card mb-4" id="myTeamMembers">
+        <!-- Team members content -->
+        <div class="card-header">
+          <h4>My Team Members</h4>
+        </div>
+        <div class="card-body">
+          <!-- Team Member 1 -->
+          <div class="d-flex align-items-center mb-3">
+            <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
+            <div class="details">
+              <h5 class="mb-1">Omar Alhamdian</h5>
+              <p class="mb-1">Major: Computer Science</p>
+            </div>
+            <div class="ms-auto d-flex flex-wrap gap-2">
+              <a href="https://wa.me/+966507113611" target="_blank">
+                <button class="btn btn-outline-success btn-sm btn-md-normal me-2">
+                  <i class="fab fa-whatsapp"></i>
+                </button>
+              </a>
+              <button class="btn btn-outline-danger btn-sm btn-md-normal delete">
+                <i class="fas fa-trash"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div> <!-- End of Team Members Card -->
+
+      <!-- Pending Requests Card -->
+      <div class="card mb-4" id="pendingRequests">
+        <!-- Pending requests content -->
+        <div class="card-header">
+          <h4>Pending Requests</h4>
+      </div>
+      <div class="card-body"> 
+          <!-- Pending Request 1 -->
+          <div class="d-flex align-items-center mb-3">
+              <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
+              <div class="details">
+                  <h5 class="mb-1">Mohammed Abo-Ras</h5>
+                  <p class="mb-1">Major: Electrical Engineering</p>
+              </div>
+              <div class="ms-auto d-flex flex-wrap gap-2">
+                  <a href="https://wa.me/+966507113611" target="_blank">
+                      <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2">
+                          <i class="fab fa-whatsapp"></i>
+                      </button>
+                  </a>
+                  <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2 accept">
+                      <i class="fas fa-check"></i>
+                  </button>
+                  <button class="btn btn-outline-danger btn-sm btn-md-normal delete">
+                      <i class="fas fa-trash"></i>
+                  </button>
+              </div>
+          </div>
+         
+      </div>
+      </div> <!-- End of Pending Requests Card -->
+
+      <!-- Delete Team Button -->
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-outline-danger" onclick="deleteTeam()">Delete Team</button>
       </div>
     </div>
   </main>
 
+  <!-- Modals -->
   <!-- Edit Profile Modal -->
-  <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+  <div class="modal fade" id="editProfileModal" tabindex="-1" aria-labelledby="editProfileModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -112,7 +195,8 @@
             </div>
             <div class="mb-3">
               <label for="profileDescription" class="form-label">Description</label>
-              <textarea class="form-control" id="profileDescription" rows="3">A dedicated student with a passion for software development and teamwork.</textarea>
+              <textarea class="form-control" id="profileDescription"
+                rows="3">A dedicated student with a passion for software development and teamwork.</textarea>
             </div>
             <button type="submit" class="btn btn-primary">Save changes</button>
           </form>
@@ -122,7 +206,8 @@
   </div>
 
   <!-- Edit Profile Picture Modal -->
-  <div class="modal fade" id="editProfilePicModal" tabindex="-1" aria-labelledby="editProfilePicModalLabel" aria-hidden="true">
+  <div class="modal fade" id="editProfilePicModal" tabindex="-1" aria-labelledby="editProfilePicModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -146,6 +231,7 @@
   <!-- Bootstrap JS Bundle (includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Custom JS -->
-  <script src="student-home-scripts.js"></script>
+  <script src="student-scripts.js"></script>
 </body>
+
 </html>
