--- a/student-team-proposals.html
+++ b/student-team-proposals.html
@@ -21,28 +21,29 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <a class="navbar-brand ms-2" href="/student-team-proposals.html">Team Proposals</a>
-            </div>
         </div>
     </nav>
+
+    <div class="container-fluid">
+        <div class="row">
             <!-- Sidebar -->
-            <nav class="sidebar">
+            <nav class="col-lg-2 d-none d-lg-block sidebar">
                 <div class="position-sticky pt-3">
-                  <ul class="nav flex-column">
-                    <li class="nav-item">
-                      <a class="nav-link" href="student-homepage.html">
-                        Home
-                      </a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" href="#">
-                        Team Proposals
-                      </a>
-                    </li>
-                  </ul>
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/student-homepage.html">
+                                Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-dark" href="/student-team-proposals.html">Team Proposals</a>
+                        </li>
+                    </ul>
                 </div>
-              </nav>
+            </nav>
+
             <!-- Offcanvas Sidebar for Small Screens -->
-            <div class="offcanvas offcanvas-start  small-sidebar" tabindex="-1" id="offcanvasSidebar"
+            <div class="offcanvas offcanvas-start small-sidebar" tabindex="-1" id="offcanvasSidebar"
                 aria-labelledby="offcanvasSidebarLabel">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title text-dark" id="offcanvasSidebarLabel">Menu</h5>
@@ -64,13 +65,64 @@
             </div>
 
             <!-- Main Content -->
-            <main class="px-md-4 content">
+            <main class="col-lg-10 ms-sm-auto px-md-4 content">
                 <div class="card-container row" id="cardContainer">
                     <!-- Cards will be dynamically added here -->
+                     <!-- Placeholder cards to be displayed while loading -->
+                    <div class="col-md-6 mb-4 placeholder-card">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title placeholder-glow">
+                                    <span class="placeholder col-6"></span>
+                                </h5>
+                                <p class="card-text placeholder-glow">
+                                    <span class="placeholder col-7"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-6"></span>
+                                    <span class="placeholder col-8"></span>
+                                </p>
+                                <div class="d-flex mb-3">
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Add more placeholder cards as needed -->
+                    <div class="col-md-6 mb-4 placeholder-card">
+                        <div class="card shadow">
+                            <div class="card-body">
+                                <h5 class="card-title placeholder-glow">
+                                    <span class="placeholder col-6"></span>
+                                </h5>
+                                <p class="card-text placeholder-glow">
+                                    <span class="placeholder col-7"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-4"></span>
+                                    <span class="placeholder col-6"></span>
+                                    <span class="placeholder col-8"></span>
+                                </p>
+                                <div class="d-flex mb-3">
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                    <div class="badge bg-outline-success rounded-circle me-2 placeholder"
+                                        style="width: 30px; height: 30px;"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
         </div>
     </div>
+
     <!-- Toast Notification -->
     <div class="position-fixed bottom-0 end-0 p-3" id="toastNotification">
         <div id="requestToast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
@@ -81,7 +133,8 @@
             <div class="toast-body" id="toastBody">
                 <!-- Toast message will be dynamically updated -->
             </div>
-       
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="student-team-proposals.js"></script>
