--- a/admin-homepage.html
+++ b/admin-homepage.html
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <!-- Add User Card -->
-                    <div class="card">
+                    <div class="card add-user">
                         <div class="card-header">
                             <h3>Add Moderator</h3>
                         </div>
