--- a/student-homepage.html
+++ b/student-homepage.html
@@ -121,7 +121,7 @@
                   <i class="fab fa-whatsapp"></i>
                 </button>
               </a>
-              <button class="btn btn-outline-danger btn-sm btn-md-normal delete">
+              <button class="btn btn-outline-danger btn-sm btn-md-normal delete-member">
                 <i class="fas fa-trash"></i>
               </button>
             </div>
@@ -134,31 +134,31 @@
         <!-- Pending requests content -->
         <div class="card-header">
           <h4>Pending Requests</h4>
-      </div>
-      <div class="card-body"> 
+        </div>
+        <div class="card-body">
           <!-- Pending Request 1 -->
           <div class="d-flex align-items-center mb-3">
-              <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
-              <div class="details">
-                  <h5 class="mb-1">Mohammed Abo-Ras</h5>
-                  <p class="mb-1">Major: Electrical Engineering</p>
-              </div>
-              <div class="ms-auto d-flex flex-wrap gap-2">
-                  <a href="https://wa.me/+966507113611" target="_blank">
-                      <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2">
-                          <i class="fab fa-whatsapp"></i>
-                      </button>
-                  </a>
-                  <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2 accept">
-                      <i class="fas fa-check"></i>
-                  </button>
-                  <button class="btn btn-outline-danger btn-sm btn-md-normal delete">
-                      <i class="fas fa-trash"></i>
-                  </button>
-              </div>
+            <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
+            <div class="details">
+              <h5 class="mb-1">Mohammed Abo-Ras</h5>
+              <p class="mb-1">Major: Electrical Engineering</p>
+            </div>
+            <div class="ms-auto d-flex flex-wrap gap-2">
+              <a href="https://wa.me/+966507113611" target="_blank">
+                <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2">
+                  <i class="fab fa-whatsapp"></i>
+                </button>
+              </a>
+              <button class="btn btn-outline-success btn-sm btn-md-normal me-md-2 accept-request">
+                <i class="fas fa-check"></i>
+              </button>
+              <button class="btn btn-outline-danger btn-sm btn-md-normal reject-request">
+                <i class="fas fa-trash"></i>
+              </button>
+            </div>
           </div>
-         
-      </div>
+
+        </div>
       </div> <!-- End of Pending Requests Card -->
 
       <!-- Delete Team Button -->
@@ -228,9 +228,9 @@
   </div>
 
   <!-- Bootstrap JS Bundle (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
   <!-- Custom JS -->
-  <script src="student-scripts.js"></script>
+  <script src="student-scripts.js" defer></script>
 </body>
 
 </html>
