--- a/student-homepage.html
+++ b/student-homepage.html
@@ -79,10 +79,10 @@
         <i class="bi bi-pencil"></i>
       </button>
       <div id="userInfo" style="padding: 20px;">
-        <h2 class="mb-1"><strong>Ali Ahmed</strong></h2>
-        <p class="mb-1">WhatsApp: +966567890123</p>
-        <p class="mb-1">Major: Computer Science</p>
-        <p class="mb-0">A dedicated student with a passion for software development and teamwork.</p>
+        <h2 class="mb-1"><strong></strong></h2>
+        <p class="mb-1"></p>
+        <p class="mb-1"></p>
+        <p class="mb-0"></p>
       </div>
     </div>
 
@@ -109,7 +109,7 @@
         </div>
         <div class="card-body">
           <!-- Team Member 1 -->
-          <div class="d-flex align-items-center mb-3">
+          <!-- <div class="d-flex align-items-center mb-3">
             <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
             <div class="details">
               <h5 class="mb-1">Omar Alhamdian</h5>
@@ -125,9 +125,9 @@
                 <i class="fas fa-trash"></i>
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
-      </div> <!-- End of Team Members Card -->
+      </div> 
 
       <!-- Pending Requests Card -->
       <div class="card mb-4" id="pendingRequests">
@@ -137,7 +137,7 @@
         </div>
         <div class="card-body">
           <!-- Pending Request 1 -->
-          <div class="d-flex align-items-center mb-3">
+          <!-- <div class="d-flex align-items-center mb-3">
             <img src="person.svg" class="rounded-circle me-3" alt="Member Picture">
             <div class="details">
               <h5 class="mb-1">Mohammed Abo-Ras</h5>
@@ -156,14 +156,30 @@
                 <i class="fas fa-trash"></i>
               </button>
             </div>
-          </div>
+          </div> -->
 
         </div>
-      </div> <!-- End of Pending Requests Card -->
+      </div> 
 
       <!-- Delete Team Button -->
       <div class="d-flex justify-content-center">
         <button class="btn btn-outline-danger" id="ExitBtn">Exit Team</button>
+      </div>
+    </div>
+
+    <!-- Add this modal before the end of main tag -->
+    <div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="infoModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content bg-white">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-center">
+            <img src="person.svg" class="rounded-circle mb-3" alt="Profile Picture">
+            <h5 class="modal-title fs-5" id="infoModalLabel"></h5>
+            <p class="mb-3 student-description"></p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
